#210803_백정연_플래너 목록 css 재수정 date : 210803 writer : 백정연 branch : jeong comment : - 플래너 목록 : 플래너 목록 css overflow 속성 추가 (footer 위치 고정 문제 해결)

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2493,9 +2493,9 @@ table {
 }
 
 .planL-container {
-    width: 1270px;
-    min-height: 1000px;
+    width: 1300px;
     margin: 0px auto;
+    overflow: auto;
 }
 
 .planL-navbox {
@@ -2545,7 +2545,7 @@ table {
 .planL-planbox {
     float: right;
     width: 1000px;
-    margin: 70px auto;
+    margin: 70px 10px 70px 0px;
 }
 
 .planL-titlebox {
