--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -551,7 +551,7 @@
 #areaList-dataContainer {
     border-radius: 20px;
     width: 1500px;
-    height: 1050px;
+    height: 1285px;
     border: 1px solid #E0EEFF;
     background-color: #E0EEFF;
     color: #647C97;
@@ -559,35 +559,41 @@
 
 #areaList-dataBox {
     width: 1175px;
-    height: 965px;
-    margin: 30px auto 0;
-    text-align: center;
+    height: 1175px;
+    margin: 50px auto 0;
+    text-align: left;
     /*border: 1px solid;*/
 }
 
 .areaList-data {
     float: left;
     display: inline-block;
-    border: 1pt solid #E0EEFF;
     width: 290px;
-    text-align: center
+    height: 380px;
+    text-align: center;
+    border: 1pt solid #E0EEFF;
+    /*border: 1px solid;*/
+}
+.clear-both{
+    clear: both;
 }
 
 #areaList-dataImg {
-    display: inline-block;
     width: 250px;
     height: 250px;
 }
 
 #areaList-dataName {
     margin-top: 20px;
-    display: inline-block;
     font-family: nanumB;
-    font-size: 1em;
+    font-size: 18px;
     padding-left: 20px;
     padding-right: 20px;
+    /*border: 1px solid;*/
 
 }
+
+
 
 #areaList-dataPage {
     padding-top: 10px;
