--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -491,12 +491,12 @@
     height: 80px;
     margin: 30px auto 0;
     position: relative;
-    /*border: 1px solid;*/
+    border: 1px solid;
 }
 
 #areaList-nav__cat {
     display: inline-block;
-    width: 515px;
+    width: 540px;
     height: 50px;
     position: absolute;
     left: 0;
