#210805_김경일_지역게시판 구현3 date : 210805 writer : 김경일 branch : comment - 지역게시글 상세보기 구현

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -486,12 +486,19 @@
     /*border: 1px solid;*/
 }
 
+#areaL-drilldownBox{
+    /*border: 1px solid;*/
+    width: 350px;
+    height: 30px;
+    margin-top: 30px;
+}
+
 #areaList-nav {
     width: 1500px;
     height: 80px;
-    margin: 30px auto 0;
+    margin: 0 auto;
     position: relative;
-    border: 1px solid;
+    /*border: 1px solid;*/
 }
 
 #areaList-nav__cat {
