--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -359,30 +359,6 @@
     color: #37FFEB
 }
 
-#header-button__b1 {
-    display: inline-block;
-    margin-left: 260px;
-    margin-top: 80px;
-    background-color: #1b3067;
-    color: white;
-    font-family: 'jua', sans-serif;
-    font-size: 1.4em;
-    border: 3px solid #1b3067;
-    border-radius: 10px;
-}
-
-#header-button__b2 {
-    display: inline-block;
-    margin-left: 10px;
-    margin-top: 80px;
-    background-color: #1b3067;
-    color: white;
-    font-family: 'jua', sans-serif;
-    font-size: 1.4em;
-    border: 3px solid #1b3067;
-    border-radius: 10px;
-}
-
 #header-miniprofile {
     display: inline-block;
     padding-top: 18px;
@@ -405,6 +381,56 @@
     background-color: #1b3067;
 }
 
+#header-miniprofileBox__guest{
+    width: 290px;
+    height: 100px;
+    position: relative;
+    right: 0;
+    border: 3px solid #1b3067;
+    border-radius: 10px;
+    background-color: #1b3067;
+}
+
+#header-button__b1 {
+    position : absolute;
+    width:110px;
+    height:40px;
+    bottom:30px;
+    left:30px;
+    background-color: #4b8de9;
+    color: white;
+    font-family: 'jua', sans-serif;
+    font-size: 1.4em;
+    border: 3px solid #4b8de9;
+    border-radius: 10px;
+}
+
+#header-button__b2 {
+    position : absolute;
+    width:110px;
+    height:40px;
+    bottom:30px;
+    right:20px;
+    background-color: #4b8de9;
+    color: white;
+    font-family: 'jua', sans-serif;
+    font-size: 1.4em;
+    border: 3px solid #4b8de9;
+    border-radius: 10px;
+}
+
+#header-miniprofile__span--nickname{
+    display:inline-block;
+    max-width:160px;
+    text-align:right;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+}
+
+#header-miniprofile__span--white{
+    vertical-align:top;
+}
 
 #header-miniprofile__photo {
     display: inline-block;
@@ -432,6 +458,7 @@
     position: absolute;
     right: 0;
     top: 14px;
+    font-family: "pooding", sans-serif;
     /*border: 1px solid black;*/
 }
 
