#210806_백정연_플래너(플랜) CRUD, 관련 css 수정 date : 210810 writer : 백정연 branch : jeong comment : - 플래너 및 플랜 CRUD 기능 구현 - 플래너 상세 페이지 : 플래너 설명 부분 추가 - 플래너 DTO, Entity, Repository, Service 인터페이스 및 구현 클래스 생성 - 플랜 Entity, Repository, Service 인터페이스 및 구현 클래스 생성 - 로그아웃시 js alert() 함수 이벤트 발생 효과 적용 - mypageIntro.jsp : js 관련 태그 충돌로 인해 jQuery 태그 삭제

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2651,11 +2651,12 @@ table {
 .planL-detailinfo {
     width: 100%;
     height: 74px;
+    position: relative;
 }
 
 .planL-detailinfo__span--date {
     font-size: 17px;
-    position: relative;
+    position: absolute;
     top: 9px;
     left: 15px;
     font-family: 'Nanum Gothic', sans-serif;
@@ -2665,17 +2666,21 @@ table {
 .planL-detailinfo__span--dday {
     font-size: 14px;
     font-weight: bolder;
-    position: relative;
-    top: 40px;
-    right: 82px;
-
+    position: absolute;
+    bottom: 17px;
+    left: 16px;
+    display:inline-block;
+    max-width:190px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .planL-detailinfo__span--days { /*days*/
     font-size: 17px;
-    position: relative;
+    position: absolute;
     top: 8px;
-    left: 28px;
+    right:20px;
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 600;
 }
@@ -2683,9 +2688,9 @@ table {
 .planL-detailinfo__button--blue {
     width: 55px;
     height: 25px;
-    position: relative;
-    top: 20px;
-    left: 225px;
+    position: absolute;
+    top: 37px;
+    right: 20px;
     background-color: #49b2e9;
     color: white;
     border: none;
@@ -2888,7 +2893,7 @@ table {
 
 .planD-titledetail {
     position: absolute;
-    top: 220px;
+    top: 210px;
     left: 30px;
     color: white;
     font-size: 30px;
@@ -2897,10 +2902,19 @@ table {
 
 .planD-titledays {
     position: absolute;
-    top: 260px;
+    top: 255px;
     left: 30px;
     color: white;
-    font-size: 15px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.planD-titleIntro{
+    position:absolute;
+    top:280px;
+    left:30px;
+    color:white;
+    font-weight: bold;
 }
 
 .planD-btnbox {
@@ -3020,14 +3034,19 @@ table {
     font-size: 32px;
     font-weight: 600;
     position: absolute;
-    top: 55px;
+    top: 60px;
     left: -5px;
+    display:inline-block;
+    max-width:270px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .planD-detailinfo__span--small {
     position: absolute;
     top: 120px;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: 600;
     color: #bdbdbd;
 }
