--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -844,7 +844,7 @@ table {
 .profilebox {
     display: inline-block;
     float: left;
-    width: 230px;
+    width: 300px;
     height: 90px;
     /*border: 1pt solid;*/
 }
@@ -870,7 +870,7 @@ table {
 /* 프로필 박스 : 닉네임 + 작성시간 */
 .profilebox--container--sub {
     display: inline-block;
-    width: 130px;
+    width: 200px;
     height: 80px;
     margin: 3px;
     text-align: left;
@@ -1136,6 +1136,15 @@ table {
     height: 100px;
     margin: 40px auto 0;
 }
+.review-btnBox--reviewEdit{
+    width: 1000px;
+    margin: 0 auto;
+    text-align: right;
+    /*border: 1px solid;*/
+}
+.review-btnBox--reviewEdit > form{
+    display: inline-block;
+}
 
 /* 상단 제목 - reviewL, reviewD */
 .common-top__title {
@@ -1349,7 +1358,7 @@ table {
 #reviewD-tablelayout {
     width: 1000px;
     text-align: right;
-    margin: 20px auto 0;
+    margin: 10px auto 0;
 }
 
 #reviewD-tablelayout tr {
