#210812_김경일_후기게시판 댓글 구현 commit date : 210812 writer : 김경일 branch : 210811_gyeong_review-comment comment - 후기게시판 댓글 CRUD구현

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -1358,13 +1358,13 @@ table {
     /*border-left: 1px #CDCECF solid;*/
 }
 
-#reviewD-tablelayout {
+.reviewD-tablelayout {
     width: 1000px;
     text-align: right;
     margin: 10px auto 0;
 }
 
-#reviewD-tablelayout tr {
+.reviewD-tablelayout tr {
     /*border: 1pt solid;*/
 }
 
