--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -381,7 +381,7 @@
     background-color: #1b3067;
 }
 
-#header-miniprofileBox__guest{
+#header-miniprofileBox__guest {
     width: 290px;
     height: 100px;
     position: relative;
@@ -392,11 +392,11 @@
 }
 
 #header-button__b1 {
-    position : absolute;
-    width:110px;
-    height:40px;
-    bottom:30px;
-    left:30px;
+    position: absolute;
+    width: 110px;
+    height: 40px;
+    bottom: 30px;
+    left: 30px;
     background-color: #4b8de9;
     color: white;
     font-family: 'jua', sans-serif;
@@ -407,11 +407,11 @@
 }
 
 #header-button__b2 {
-    position : absolute;
-    width:110px;
-    height:40px;
-    bottom:30px;
-    right:20px;
+    position: absolute;
+    width: 110px;
+    height: 40px;
+    bottom: 30px;
+    right: 20px;
     background-color: #4b8de9;
     color: white;
     font-family: 'jua', sans-serif;
@@ -421,17 +421,17 @@
     cursor: pointer;
 }
 
-#header-miniprofile__span--nickname{
-    display:inline-block;
-    max-width:160px;
-    text-align:right;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    white-space:nowrap;
+#header-miniprofile__span--nickname {
+    display: inline-block;
+    max-width: 160px;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-#header-miniprofile__span--white{
-    vertical-align:top;
+#header-miniprofile__span--white {
+    vertical-align: top;
 }
 
 #header-miniprofile__photo {
@@ -516,7 +516,7 @@
     /*border: 1px solid;*/
 }
 
-#areaL-drilldownBox{
+#areaL-drilldownBox {
     /*border: 1px solid;*/
     width: 350px;
     height: 30px;
@@ -611,7 +611,8 @@
     border: 1pt solid #E0EEFF;
     /*border: 1px solid;*/
 }
-.clear-both{
+
+.clear-both {
     clear: both;
 }
 
@@ -629,7 +630,6 @@
     /*border: 1px solid;*/
 
 }
-
 
 
 #areaList-dataPage {
@@ -725,14 +725,14 @@
     text-align: center;
     margin: 0 auto 40px;
     background-color: #647C97;
-    font-family: nanumB ,sans-serif;
+    font-family: nanumB, sans-serif;
     font-size: 18px;
     border-color: #647C97;
     border-radius: 10px;
     padding: 10px 30px 10px 30px;
 }
 
-#areaDetail-info__table th,td {
+#areaDetail-info__table th, td {
     /*border: 1px solid;*/
 }
 
@@ -847,7 +847,7 @@ table {
 .profilebox {
     display: inline-block;
     float: left;
-    width: 300px;
+    width: 230px;
     height: 90px;
     /*border: 1pt solid;*/
 }
@@ -873,7 +873,7 @@ table {
 /* 프로필 박스 : 닉네임 + 작성시간 */
 .profilebox--container--sub {
     display: inline-block;
-    width: 200px;
+    width: 130px;
     height: 80px;
     margin: 3px;
     text-align: left;
@@ -972,6 +972,11 @@ table {
     border: 1px #CDCECF solid;
     border-radius: 10px;
     position: relative;
+}
+
+.commentbox > form {
+    display: inline-block;
+    margin: 0;
 }
 
 .comment__textarea {
@@ -1139,13 +1144,15 @@ table {
     height: 100px;
     margin: 40px auto 0;
 }
-.review-btnBox--reviewEdit{
+
+.review-btnBox--reviewEdit {
     width: 1000px;
     margin: 0 auto;
     text-align: right;
     /*border: 1px solid;*/
 }
-.review-btnBox--reviewEdit > form{
+
+.review-btnBox--reviewEdit > form {
     display: inline-block;
 }
 
@@ -2472,19 +2479,19 @@ table {
 }
 
 
-.mypageD-boardbox__td--num{
+.mypageD-boardbox__td--num {
     width: 15%;
 }
 
-.mypageD-boardbox__td--title{
-    width:60%;
+.mypageD-boardbox__td--title {
+    width: 60%;
 }
 
 .mypageD-boardbox__tr--white {
     height: 35px;
 }
 
-.mypageD-boardbox__td--none{
+.mypageD-boardbox__td--none {
     font-weight: 600;
     border-bottom: 2px solid #dadce0;
 }
@@ -2517,15 +2524,15 @@ table {
 }
 
 .mypageD-boardpage__li--link {
-    display:inline-block;
+    display: inline-block;
     width: 30px;
     height: 22px;
     border-top: 2px solid #dadce0;
     border-bottom: 2px solid #dadce0;
     border-left: 1px solid #dadce0;
     border-right: 1px solid #dadce0;
-    font-size:16px;
-    margin:0 auto;
+    font-size: 16px;
+    margin: 0 auto;
 }
 
 .mypageD-boardpage__a--num:link {
@@ -2699,8 +2706,8 @@ table {
     position: absolute;
     bottom: 17px;
     left: 16px;
-    display:inline-block;
-    max-width:190px;
+    display: inline-block;
+    max-width: 190px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -2710,7 +2717,7 @@ table {
     font-size: 17px;
     position: absolute;
     top: 8px;
-    right:20px;
+    right: 20px;
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 600;
 }
@@ -2727,7 +2734,7 @@ table {
     border-radius: 7px;
     font-family: 'Jua', sans-serif;
     font-weight: bolder;
-    line-height:25px;
+    line-height: 25px;
     cursor: pointer;
 }
 
@@ -2942,11 +2949,11 @@ table {
     font-weight: bold;
 }
 
-.planD-titleIntro{
-    position:absolute;
-    top:280px;
-    left:30px;
-    color:white;
+.planD-titleIntro {
+    position: absolute;
+    top: 280px;
+    left: 30px;
+    color: white;
     font-weight: bold;
 }
 
@@ -3069,8 +3076,8 @@ table {
     position: absolute;
     top: 60px;
     left: -5px;
-    display:inline-block;
-    max-width:270px;
+    display: inline-block;
+    max-width: 270px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -3869,7 +3876,7 @@ table {
     font-size: 18px;
 }
 
-.memberJ-container__input--date{
+.memberJ-container__input--date {
     display: none;
 }
 
