#210813_백정연_회원 정보 조회 및 회원 탈퇴 기능 구현 date : 210813 writer : 백정연 branch : 210810_jeong_memberUpdate comment : - 회원 정보 조회 기능 구현 (후기글, 후기글 댓글 조회) - 회원 탈퇴 기능 구현 (회원 관련 글,댓글, 플래너 삭제) - 파일 저장 경로 변경 - impl 폴더 삭제

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2383,6 +2383,19 @@ table {
     cursor: pointer;
 }
 
+.mypageD-buttonbox__button--gray{
+    margin: 20px auto;
+    width: 170px;
+    height: 50px;
+    color: #ffffff;
+    background-color: #909090;
+    border: none;
+    border-radius: 5px;
+    font-size: 19px;
+    font-family: 'Jua', sans-serif;
+    cursor: pointer;
+}
+
 .mypageD-crewcontainer {
     width: 900px;
     margin: 70px 0 70px 0;
