--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -176,6 +176,7 @@
     color: #647C97;
 }
 
+
 /* header_mini */
 #headerM-container {
     width: 100%;
@@ -1485,9 +1486,9 @@ table {
     color: white;
 }
 
-.crew-button--upload {
-    cursor: pointer;
+.crew-label--upload {
     background-color: #FF8000;
+    cursor: pointer;
     border-radius: 6px;
     border: none;
     color: #F8ECE0;
@@ -1497,6 +1498,11 @@ table {
     font-size: 15px;
     padding: 1px;
     position: absolute;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    line-height: 20px;
+    display: inline-block;
 }
 
 .crew-topContainer {
@@ -1552,6 +1558,14 @@ table {
     top: 1px;
     right: 0;
     /*border: 1pt solid;*/
+}
+
+#crewL-container--bottom {
+    width: 1246px;
+    height: 50px;
+    margin: 30px auto 0;
+    text-align: center;
+    /*border: 1px solid;*/
 }
 
 .crew-listContainer {
@@ -1998,6 +2012,26 @@ table {
     top: 0;
     height: 30px
 }
+
+#crewI_input--image {
+    display: none;
+}
+
+#crewI-input--name{
+    position: absolute;
+    left: 20px;
+}
+#crewI-btn--checkName{
+    position: absolute;
+    left: 225px;
+}
+
+#crewI-nameCheckMsg{
+    position: absolute;
+    left: 335px;
+    top : 32px
+}
+
 
 /* crewDetail */
 #crewM-btn--modifyInfo {
