--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -1705,7 +1705,7 @@ table {
 
 .crew-infoContainer {
     width: 1120px;
-    height: 600px;
+    height: 720px;
     margin-top: 50px;
     border: 1px solid #CDCECF;
     box-shadow: 1px 2px 5px #CDCECF;
@@ -1762,8 +1762,8 @@ table {
     text-align: left;
     font-size: 15px;
     font-family: 'Nanum Gothic', sans-serif;
-    height: 266px;
     width: 490px;
+    height: 266px;
     margin: 10px 0 auto;
     border-radius: 5px;
     border: 1px solid #CDCECF;
@@ -1881,7 +1881,7 @@ table {
 
 .crew-member--idbox {
     text-align: left;
-    width: 200px;
+    width: 270px;
     display: inline-block;
     padding-left: 30px;
     /*border: 1pt solid;*/
@@ -2017,19 +2017,20 @@ table {
     display: none;
 }
 
-#crewI-input--name{
+#crewI-input--name {
     position: absolute;
     left: 20px;
 }
-#crewI-btn--checkName{
+
+#crewI-btn--checkName {
     position: absolute;
     left: 225px;
 }
 
-#crewI-nameCheckMsg{
+#crewI-nameCheckMsg {
     position: absolute;
     left: 335px;
-    top : 32px
+    top: 32px
 }
 
 
@@ -2066,6 +2067,24 @@ table {
     position: absolute;
     right: 40px;
     top: 10px;
+}
+
+#crewM_input--image {
+    display: none;
+}
+
+#crewM-btn--submitIntro {
+    position: relative;
+    left: 465px;
+    top: 5px;
+}
+
+#crewM-textArea--intro {
+    width: 440px;
+    height: 50px;
+    resize: none;
+    border: 1px solid #CDCECF;
+    margin-top: 7px;
 }
 
 #cBoardL-list {
@@ -2169,6 +2188,27 @@ table {
     width: 600px;
     text-align: right;
     margin: 20px 0 20px 0;
+}
+
+.crew_popupContainer{
+    width: 800px;
+    margin: 10px auto 0;
+    /*border: 1px #CDCECF solid;*/
+}
+.crew_popupContainer > span{
+    display: inline-block;
+    text-align: left;
+    line-height: 48px;
+    font-family: "Nanum Gothic Coding", sans-serif;
+    font-size: 20px;
+    height: 50px;
+    padding: 5px;
+
+}
+.crewEJ-input--modify{
+    border: 1px #CDCECF solid;
+    padding: 8px;
+    width: 630px;
 }
 
 /* made by 정연*/
