--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2135,7 +2135,7 @@ table {
 #cBoardD-tablelayout {
     width: 1000px;
     text-align: right;
-    margin: 50px auto 0;
+    margin: 10px auto 0;
 }
 
 #cBoardD-comment__banner {
@@ -2174,6 +2174,17 @@ table {
     padding: 0 10px 10px 10px;
     box-shadow: 1px 2px #CDCECF;
     display: none;
+}
+
+.cBoardD-btnbox-edit{
+    text-align: right;
+    width: 1000px;
+    margin: 50px auto 0;
+    /*border: 1px solid;*/
+}
+
+.cBoardD-btnbox-edit > form{
+    display: inline-block;
 }
 
 /* crewJoin */
