#210818_백정연_마이페이지, 플래너 페이지 header 수정,마이 페이지 크루 조회 수정, 플래너 삭제 경고창 수정 date : 210818 writer : 백정연 branch : 210810_jeong_memberUpdate comment : - 마이페이지, 플래너 페이지 header 잘림 현상 수정 - 마이 페이지 회원 수정 가능 여부 표시 - 마이 페이지 크루 조회 오류 수정 - 플래너 삭제시 경고창 생성 - 플래너 작성 페이지 지도 크기 축소

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2311,11 +2311,19 @@ table {
     border-radius: 20px 20px 0px 0px;
 }
 
+.memberL-header__div .headerM-weatherBox__text{
+    line-height:17px;
+}
+
 .mypageD-titlecontainer__span--big {
     font-size: 34px;
     font-weight: bold;
     display: inline-block;
     margin: 23px 10px 0px 26px;
+}
+
+.mypageD_span{
+    font-family: 'Jua', sans-serif;
 }
 
 .mypageD-infocontainer {
@@ -2509,6 +2517,15 @@ table {
     display: inline-block;
     margin: 10px 0 10px 26px;
     font-family: 'Jua', sans-serif;
+}
+
+.mypageD-crewlistbox__span--none{
+    font-size:20px;
+    font-weight:bold;
+    display:inline-block;
+    position:absolute;
+    top:60px;
+    left:300px;
 }
 
 .mypageD-crewlistbox {
@@ -2763,7 +2780,7 @@ table {
     margin: 20px 15px 0 0;
     border: none;
     border-radius: 6px;
-    background-color: #a9e2f3;
+    background-color: #0080ff;
     color: white;
     font-family: 'Jua', sans-serif;
     font-size: 18px;
@@ -3510,7 +3527,7 @@ table {
 
 .planI-mapbox {
     height: 90%;
-    width: 65.6%;
+    width: 63%;
     position: absolute;
     left: 731px;
 }
