#210819_김경일_크루수정사항적용 commit date : 210818 writer : 김경일 branch : 210818_gyeong_security comment - 크루게시판 수정사항 적용(중)

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -990,6 +990,16 @@ table {
     resize: none;
 }
 
+.comment__textarea_edit {
+    width: 730px;
+    height: 90px;
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: 15px;
+    outline: none;
+    border: none;
+    resize: none;
+}
+
 .common-tbl__item {
     font-family: 'Nanum Gothic Coding', monospace;
     font-size: 15px;
