#210924_백정연_aws 연동, 크루 생성, 마이페이지 수정 commit date : 210924 writer : 백정연 branch : 210903_jeong_optimizing comment - aws 연동 관련 설정 추가 - 크루 생성 페이지 페이징 처리 수정 - 마이페이지 상세 페이징 처리 수정 - 회원가입 완료 페이지 footer css 수정

--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -3540,7 +3540,7 @@ table {
 
 .planI-mapbox {
     height: 90%;
-    width: 63%;
+    width: 70%;
     position: absolute;
     left: 731px;
 }
@@ -4200,9 +4200,5 @@ table {
 }
 
 .memberL-footer {
-
+    padding-top:40px;
 }
-
-/* memberPolicy */
-
-/* memberRule */
