--- a/src/main/resources/static/_css/mainStyle.css
+++ b/src/main/resources/static/_css/mainStyle.css
@@ -2610,11 +2610,12 @@ table {
 }
 
 .mypageD-crewlistbox__span--big {
-    display: inline-block;
-    margin-left: 100px;
-    vertical-align: 60px;
+    position : absolute;
+    top:65px;
+    left:100px;
+    text-align:center;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 900;
 }
 
 .mypageD-crewlistbox__a--big {
@@ -2625,8 +2626,10 @@ table {
     width: 110px;
     height: 110px;
     border: 3px solid #dadce0;
-    margin: 15px auto;
+    top: 20px;
+    left:350px;
     border-radius: 60px;
+    position: absolute;
 }
 
 .mypageD-crewlistbox__button--blue {
